initial contentful setup and hopefully fly deployment

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,16 @@
+CONTENTFUL_SPACE_ID="space"
+CONTENTFUL_ACCESS_TOKEN="token"
+CONTENTFUL_MANAGEMENT_API_ACCESS_TOKEN="token"
+CONTENTFUL_ENVIRONMENT="master"
+
 DATABASE_URL="file:./data.db?connection_limit=1"
+DB_NAME=postgres
+DB_PORT=
+DB_URL=
+DB__PASSWORD=
+DB_USER=
+
 SESSION_SECRET="super-duper-s3cret"
+PORT=4001
+
+FLY_API_TOKEN="token"
