--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "pretest:e2e:run": "npm run build",
     "test:e2e:run": "cross-env PORT=8811 start-server-and-test start:mocks http://localhost:8811 \"npx cypress run\"",
     "typecheck": "tsc && tsc -p cypress",
-    "validate": "run-p \"test -- --run\" lint typecheck test:e2e:run"
+    "validate": "run-p \"test -- --run\" lint typecheck test:e2e:run",
+    "generate:cms-types": "contentful-typescript-codegen --output @types/generated/contentful.d.ts"
   },
   "prettier": {},
   "eslintIgnore": [
@@ -25,18 +26,23 @@
     "/public/build"
   ],
   "dependencies": {
+    "@contentful/rich-text-react-renderer": "^15.21.2",
     "@prisma/client": "^4.16.2",
     "@remix-run/css-bundle": "^2.9.2",
     "@remix-run/node": "^2.9.2",
     "@remix-run/react": "^2.9.2",
     "@remix-run/serve": "^2.9.2",
     "bcryptjs": "^2.4.3",
+    "classnames": "^2.5.1",
+    "contentful": "^10.11.7",
     "isbot": "^4.4.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "tiny-invariant": "^1.3.3"
   },
   "devDependencies": {
+    "@bitovi/eslint-config": "^1.8.0",
+    "@contentful/rich-text-types": "^16.5.2",
     "@faker-js/faker": "^8.4.1",
     "@remix-run/dev": "^2.9.2",
     "@testing-library/cypress": "^10.0.1",
@@ -53,9 +59,13 @@
     "@vitest/coverage-v8": "^1.5.3",
     "autoprefixer": "^10.4.19",
     "binode": "^1.0.5",
+    "cf-content-types-generator": "^2.15.2",
+    "contentful-management": "^11.26.2",
+    "contentful-typescript-codegen": "^3.4.0",
     "cookie": "^0.6.0",
     "cross-env": "^7.0.3",
     "cypress": "^13.8.1",
+    "dotenv": "^16.4.5",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-import-resolver-typescript": "^3.6.1",
@@ -85,7 +95,7 @@
     "vitest": "^1.5.3"
   },
   "engines": {
-    "node": ">=18.0.0"
+    "node": ">=22.0.0"
   },
   "prisma": {
     "seed": "ts-node -r tsconfig-paths/register prisma/seed.ts"
