--- a/package.json
+++ b/package.json
@@ -85,11 +85,12 @@
     "prettier": "3.2.5",
     "prettier-plugin-tailwindcss": "^0.5.14",
     "prisma": "^5.16.1",
+    "remix-flat-routes": "^0.6.5",
     "start-server-and-test": "^2.0.3",
     "tailwindcss": "^3.4.3",
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
-    "typescript": "^5.4.5",
+    "typescript": "^5.5.3",
     "vite": "^5.2.11",
     "vite-tsconfig-paths": "^4.3.2",
     "vitest": "^1.5.3"
